Extension should be done

--- a/popup.html
+++ b/popup.html
@@ -7,52 +7,9 @@
     <body>
         <img src="images/fullLogo.png">
         <br>
-        <div class="card">
-            <div class="header">
-                <h1>Core i11 CPU</h1>
-            </div>
-            <div class="body">
-                <h4><a href="">https://simulator.io/board/TrVtEZY9uC/1</a></h4>
-                <h4><a href="">https://simulator.io/board/TrVtEZY9uC/1</a></h4>
-                <h4><a href="">https://simulator.io/board/TrVtEZY9uC/1</a></h4>
-                <h4><a href="">https://simulator.io/board/TrVtEZY9uC/1</a></h4>
-            </div>
-        </div>
-        <br>
-        <div class="card">
-            <div class="header">
-                <h1>Core i13 CPU</h1>
-            </div>
-            <div class="body">
-                <h4><a href="">https://simulator.io/board/TrVtEZY9uC/1</a></h4>
-                <h4><a href="">https://simulator.io/board/TrVtEZY9uC/1</a></h4>
-                <h4><a href="">https://simulator.io/board/TrVtEZY9uC/1</a></h4>
-                <h4><a href="">https://simulator.io/board/TrVtEZY9uC/1</a></h4>
-            </div>
-        </div>
-        <br>
-        <div class="card">
-            <div class="header">
-                <h1>Core i15 CPU</h1>
-            </div>
-            <div class="body">
-                <h4><a href="">https://simulator.io/board/TrVtEZY9uC/1</a></h4>
-                <h4><a href="">https://simulator.io/board/TrVtEZY9uC/1</a></h4>
-                <h4><a href="">https://simulator.io/board/TrVtEZY9uC/1</a></h4>
-                <h4><a href="">https://simulator.io/board/TrVtEZY9uC/1</a></h4>
-            </div>
-        </div>
-        <br>
-        <div class="card">
-            <div class="header">
-                <h1>Core i17 CPU</h1>
-            </div>
-            <div class="body">
-                <h4><a href="">https://simulator.io/board/TrVtEZY9uC/1</a></h4>
-                <h4><a href="">https://simulator.io/board/TrVtEZY9uC/1</a></h4>
-                <h4><a href="">https://simulator.io/board/TrVtEZY9uC/1</a></h4>
-                <h4><a href="">https://simulator.io/board/TrVtEZY9uC/1</a></h4>
-            </div>
-        </div>
+        <!--content goes here-->
+
+        <script src="js/jquery-3.2.1.min.js"></script>
+        <script src="js/popup.js"></script>
     </body>
 </html>
